get rid of html/body overflow and scrollbars, fixes #4

--- a/app.css
+++ b/app.css
@@ -1,9 +1,16 @@
-iframe {
-    border: 0;
+html,
+body {
+    padding: 0;
+    margin: 0;
+    overflow-y:hidden;
+    height:100%;
 }
 .nav-tabs {
     padding-top: 5px;
 }
 .nav-tabs > li > a {
     padding: 5px 10px;
+}
+iframe {
+    border: 0;
 }
